add comment api

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLOUD_NAME= abhi0402
 CLOUDINARY_API_KEY = 563625316724817
 CLOUDINARY_API_SECRET = wNockAjIRT3B8CYMYvS2BZ9pouQ
+MONGO_URI = mongodb+srv://abhi123:abhi123@cluster0-bzc5i.mongodb.net/<dbname>?retryWrites=true&w=majority
